@@ -1,5 +1,9 @@
 Revision history for Perl extension Shlomif::NavMenu.
 
+    - Fixed a bug in HTML::Widgets::NavMenu::Url:
+    relative URL from a non-dir to a dir. It accidently had an
+    extraneous "../".
+
 1.0001    Mon Sep 11 14:38:39 IDT 2006
     - Added "use strict" and "use warnings" to all modules.
     - Added a Test::Pod based test.
